docs(website): release announcement of Serenity/JS 3.21

--- a/documentation/serenity-js.org/blog/2024-03-09-support-for-tags/index.mdx
+++ b/documentation/serenity-js.org/blog/2024-03-09-support-for-tags/index.mdx
@@ -1,6 +1,6 @@
 ---
-slug: support-for-tagging
-title: Support for tagging
+slug: support-for-tags
+title: Support for @tags
 authors: [jan-molak]
 tags:
   - web
@@ -13,7 +13,7 @@ tags:
   - open-source
 ---
 
-![Support for tagging](./support-for-tagging.png)
+![Support for tagging](./support-for-tags.png)
 
 📣 Serenity/JS now supports tagging across all the test runners 🎉
 
@@ -26,7 +26,7 @@ Now, you can use `@tags` across all the supported test runners, so:
 - [Playwright Test](/handbook/test-runners/playwright-test/)
 - [Protractor](/handbook/test-runners/protractor/)
 
-## 💡 Why should you tag your scenarios? 🏷️
+## Why should you tag your scenarios?
 
 Tagging test scenarios helps you organise and filter your test suites. You can categorise tests based on functionality, priority, or type, making it easier to manage and focus your testing efforts.
 
@@ -34,12 +34,12 @@ Plus, tagging allows for selective test execution. You can run a subset of tests
 
 Tagging also improves test reporting and integrates well with test management tools. It gives you insights into test coverage and helps streamline test planning and tracking.
 
-And if you're using Playwright Test, Serenity/JS supports the latest Playwright 1.42 tag API, enhancing your tagging capabilities even further!
+And if you're using Playwright Test, Serenity/JS supports the latest [Playwright 1.42 tag API](https://playwright.dev/docs/release-notes#version-142), enhancing your tagging capabilities even further!
 
 ## Contributor spotlight
 
 A huge thank you to our Serenity/JS Contributors for their work on this release:
-- ⭐️ [Otoniel Isidoro](https://www.linkedin.com/in/otoniel-isidoro-61b38512/), who enabled tagging support for Playwright Test
-- ⭐️ [Mateusz Kruk](https://www.linkedin.com/in/mateusz-kruk-2784a3217/), who greatly improved Playwright Test global error handling
+- [Otoniel Isidoro](https://www.linkedin.com/in/otoniel-isidoro-61b38512/), who enabled tagging support for Playwright Test
+- [Mateusz Kruk](https://www.linkedin.com/in/mateusz-kruk-2784a3217/), who greatly improved Playwright Test global error handling
 
 Enjoy Serenity!
