--- a/documentation/serenity-js.org/community/contributing/index.mdx
+++ b/documentation/serenity-js.org/community/contributing/index.mdx
@@ -5,13 +5,9 @@ sidebar_position: 2
 
 # Contributing to Serenity/JS
 
-```mdx-code-block
-import Figure from '@site/src/components/Figure'
-```
+Thank you for deciding to contribute to Serenity/JS and help us move the project forward! You are awesome, and we greatly appreciate your time and talent &#x1F60A;
 
-Thank you for deciding to contribute to Serenity/JS and help us move the project forward! You are awesome and we greatly appreciate your time and talent &#x1F60A;
-
-If anything in the Serenity/JS documentation is not as clear as it could be or you have ideas on how to improve the codebase to make the life of our community easier - please let us know! Your feedback will help us make Serenity/JS better for everyone.
+If anything in the Serenity/JS documentation is not as clear as it could be, or you have ideas on how to improve the codebase to make the life of our community easier - please let us know! Your feedback will help us make Serenity/JS better for everyone.
 
 Please also make sure to join us on the [Serenity/JS Community Chat](https://matrix.to/#/#serenity-js:gitter.im) to ask questions and discuss your ideas. We're here to support you and help you get started on your contribution journey. Let's work together to make Serenity/JS even better for everyone!
 
