docs(website): added a new community article

--- a/documentation/serenity-js.org/community/resources.mdx
+++ b/documentation/serenity-js.org/community/resources.mdx
@@ -9,6 +9,10 @@ If you've written an article, tutorial, or a blog post, recorded a video, or are
 please [add it to the list below](https://github.com/serenity-js/serenity-js/tree/main/documentation/serenity-js.org/community/resources.mdx) to share the news with the community!
 
 ## Articles
+- **["Reuse Component Test Code with BDD Scenarios using Serenity/JS and Playwright"](https://www.pilot-period.org/sjs-playwright-ct-cucumber)**
+by [Jan Graefe](https://www.linkedin.com/in/jan-graefe-5b515b260/)
+(2024-03-17)
+
 - **["Component Testing with React/Next.js, Playwright, and Serenity/JS"](https://www.pilot-period.org/sjs-playwright-ct/)**
 by [Jan Graefe](https://www.linkedin.com/in/jan-graefe-5b515b260/)
 (2024-02-25)
