docs(website): code clean-up

--- a/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
+++ b/documentation/serenity-js.org/docs/test-runners/cucumber.mdx
@@ -17,7 +17,7 @@ written in [plain language](https://cucumber.io/docs/guides/overview/).
 
 If you'd like to dive straight into the code,
 [Serenity/JS GitHub repository](https://github.com/serenity-js) provides:
-- [Serenity/JS + Cucumber project templates](https://github.com/serenity-js?q=cucumber+template&type=all&language=&sort=), which are the easiest way to start with the framework
+- [Serenity/JS + Cucumber project templates](/handbook/getting-started/project-templates/), which are the easiest way to start with the framework
 - [Examples and reference implementations](https://github.com/serenity-js/serenity-js/tree/main/examples), demonstrating using Serenity/JS with Cucumber to write both REST API- and web-based acceptance tests
 
 ## Using Serenity/JS reporting services
