--- a/documentation/serenity-js.org/docs/design/debugging.mdx
+++ b/documentation/serenity-js.org/docs/design/debugging.mdx
@@ -121,6 +121,58 @@ await actorCalled('Debbie').attemptsTo(
 );
 ```
 
+## Inspecting page element HTML
+
+When debugging [Page Element Query Language](/handbook/web-testing/page-element-query-language/) expressions
+it can be helpful to inspect the HTML of the elements that match the query.
+
+To inspect the HTML of a single `PageElement`, use its [`outerHtml()`](/api/web/class/PageElement/#outerHtml) instance method:
+
+```typescript
+import { actorCalled, Log } from '@serenity-js/core'
+import { Navigate, PageElement, By, Text } from '@serenity-js/web'
+import { includes } from '@serenity-js/assertions'
+
+await actorCalled('Debbie').attemptsTo(
+    Navigate.to('https://serenity-js.org'),
+
+    Log.the(
+        PageElement.located(By.css('h1')).outerHtml()
+    ),
+
+    Log.the(
+        PageElements.located(By.css('a'))
+            .where(Text, includes('modular'))
+            .first()
+            .outerHtml()
+    ),
+);
+```
+
+To inspect the HTML of multiple matching `PageElements`, use [`PageElements#eachMappedTo`](/api/web/class/PageElements/#eachMappedTo)
+instance method, combined with the meta-question produced by the [`PageElement.outerHtml()`](/api/web/class/PageElement/#outerHtml) static method:
+
+```typescript
+import { actorCalled, Log } from '@serenity-js/core'
+import { Navigate, PageElement, By, Text } from '@serenity-js/web'
+import { includes } from '@serenity-js/assertions'
+
+await actorCalled('Debbie').attemptsTo(
+    Navigate.to('https://serenity-js.org'),
+
+    Log.the(
+        PageElements.located(By.css('a'))
+            .eachMappedTo(PageElement.outerHtml())
+    ),
+
+    Log.the(
+        PageElements.located(By.css('a'))
+            .where(Text, includes('modular'))
+            .eachMappedTo(PageElement.outerHtml())
+    ),
+);
+```
+
 ## Inspecting Serenity/JS domain events
 
 Serenity/JS uses [domain events](/handbook/reporting/domain-events/) to facilitate communication between [actors](/api/core/class/Actor)
