docs(website): corrected links

--- a/documentation/serenity-js.org/docs/integration/jira-and-other-issue-trackers.mdx
+++ b/documentation/serenity-js.org/docs/integration/jira-and-other-issue-trackers.mdx
@@ -54,7 +54,7 @@ From there, it's picked up by Serenity BDD CLI and included in the [Serenity BDD
 :::info PRO TIP
 [Serenity/JS Cucumber Test Runner Adapter](/handbook/test-runners/cucumber) automatically links any scenarios tagged with `@issue:<issueId>` and `@issues:<issueId1,issueId2,...>`.
 
-If you need this functionality for any other test runners, please [raise a ticket on GitHub](https://github.com/serenity-js/serenity-js/issues) or [submit a pull request](/contributing).
+If you need this functionality for any other test runners, please [raise a ticket on GitHub](https://github.com/serenity-js/serenity-js/issues) or [submit a pull request](/community/contributing/).
 :::
 
 ## Tagging Cucumber scenarios and features
